# rtic-issue-611

./: Cargo.toml
src/: main.rs
