[package]
name = "rtic-issue-611"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rtic-issue-611"
path = "src/main.rs"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
#cortex-m-rtic = "1.0.0"
cortex-m-rtic = { git = "https://github.com/LU15W1R7H/cortex-m-rtic" }
systick-monotonic = "1.0.0"
alloc-cortex-m = "0.4.2"
panic-semihosting = "0.5.6"
rp2040-boot2 = "0.2.0"

rp-pico = "0.2.0"
